--- a/網頁製作/styles.css
+++ b/網頁製作/styles.css
@@ -5,7 +5,7 @@ h1,h3{
   color: blue;
 }
 p {
-  color: black;
+  color: blue;
 }
 
 
@@ -66,7 +66,7 @@ img:hover {
   padding: 20px;
   width: 90%;
   background-color: green;
-  height: 500px; 
+  height: auto; 
   margin-top:7px;
   float:left;
 }
